--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "dj-rest-auth>=7.0.1",
     "django>=5.2.3",
     "django-allauth>=65.9.0",
+    "django-cleanup>=9.0.0",
     "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
     "django-filter>=25.1",
