--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "channels>=4.2.2",
     "cryptography>=45.0.4",
     "dj-rest-auth>=7.0.1",
     "django>=5.2.3",
@@ -18,4 +19,5 @@ dependencies = [
     "drf-nested-routers>=0.94.2",
     "requests>=2.32.4",
     "ruff>=0.12.1",
+    "uvicorn>=0.35.0",
 ]
