--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "channels>=4.2.2",
+    "channels[daphne]>=4.2.2",
     "cryptography>=45.0.4",
     "dj-rest-auth>=7.0.1",
     "django>=5.2.3",
