A Few Quick Fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
     "drf-nested-routers>=0.94.2",
+    "pillow>=11.3.0",
+    "pyzbar>=0.1.9",
     "requests>=2.32.4",
     "ruff>=0.12.1",
     "uvicorn>=0.35.0",
