--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "channels[daphne]>=4.2.2",
     "cryptography>=45.0.4",
+    "dj-database-url>=3.0.1",
     "dj-rest-auth>=7.0.1",
     "django>=5.2.3",
     "django-allauth>=65.9.0",
@@ -18,6 +19,7 @@ dependencies = [
     "djangorestframework-simplejwt>=5.5.0",
     "drf-nested-routers>=0.94.2",
     "pillow>=11.3.0",
+    "psycopg2-binary>=2.9.10",
     "pyzbar>=0.1.9",
     "requests>=2.32.4",
     "ruff>=0.12.1",
