--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,11 +29,10 @@ jobs:
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-
       - name: Build Django Backend Image
         run: |
-          docker build -t ${{ steps.login-ecr.outputs.registry }}/donatio:django_latest .
+          docker build -t ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:django_latest .
 
       - name: Push Image to Amazon ECR
         run: |
-          docker push ${{ steps.login-ecr.outputs.registry }}/donatio:django_latest
+          docker push ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:django_latest
