--- a/k8s/django/deployment.yml
+++ b/k8s/django/deployment.yml
@@ -25,7 +25,7 @@ spec:
             - name: DEBUG
               value: "1"
             - name: DJANGO_ALLOWED_HOSTS
-              value: "localhost,127.0.0.1"
+              value: "localhost,127.0.0.1,k8s-donatio-appingre-2c3a1c7d21-661808104.ap-southeast-1.elb.amazonaws.com"
             - name: GOOGLE_CLIENT_ID
               valueFrom:
                 secretKeyRef:
@@ -37,7 +37,10 @@ spec:
                   name: django-secret
                   key: GOOGLE_APP_PASSWORD
             - name: DATABASE_URL
-              value: postgresql://postgres:postgres@postgres-donatio-service:5432/donatio
+              valueFrom:
+                secretKeyRef:
+                  name: django-secret
+                  key: DATABASE_URL
           volumeMounts:
             - name: django-persistent-storage
               mountPath: /app/media
@@ -54,6 +57,7 @@ metadata:
 spec:
   selector:
     app: django-donatio
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 8000
@@ -73,6 +77,26 @@ spec:
   storageClassName: gp2
 
 ---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: django-migrate
+spec:
+  template:
+    spec:
+      containers:
+        - name: migrate
+          image: 592867232570.dkr.ecr.ap-southeast-1.amazonaws.com/eks-cluster/donatio:django_latest
+          command: ["uv", "run", "python", "manage.py", "migrate"]
+          env:
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: django-secret
+                  key: DATABASE_URL
+      restartPolicy: OnFailure
+
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -81,6 +105,7 @@ type: Opaque
 data:
   GOOGLE_CLIENT_ID: ODU0NjY2NTEzMDg2LWhvNjM3MGNmZ3NnNGI5MDQ1bzltbDgwZTAwZGJiNHEucXBzLmdvb2dsZXVzZXJjb250ZW50LmNvbQ==
   GOOGLE_APP_PASSWORD: amt1eiB0dWVsIG52dWQgbnV5dA==
+  DATABASE_URL: cG9zdGdyZXNxbDovL3Bvc3RncmVzOnBvc3RncmVzQHBvc3RncmVzLWRvbmF0aW8tc2VydmljZTo1NDMyL2RvbmF0aW8=
 # image pull secret
 # $PASSWORD = aws ecr get-login-password --region ap-southeast-1
 # aws ecr get-login-password --region ap-southeast-1 | `
