--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,10 +31,10 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
       - name: Build Django Backend Image
         run: |
-          docker build --no-cache -t ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:django_latest .
+          docker build --no-cache -t ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }} .
 
       - name: Push Image to Amazon ECR
         run: |
-          docker push ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:django_latest
+          docker push ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }}
 
           
