--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,8 +37,13 @@ jobs:
         run: |
           docker push ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }}
     
+      - name: Configure kubeconfig
+        run: |
+          aws eks --region ap-southeast-1 update-kubeconfig --name opom-infra-prod
+
       - name: Update deployment image
         run: |
-         kubectl set image deployment/django-donatio django-donatio=592867232570.dkr.ecr.ap-southeast-1.amazonaws.com/eks-cluster/donatio:${{ github.sha }}
+          kubectl set image deployment/django-donatio django-donatio=${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }}
+
 
           
