--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Update deployment image
         run: |
-          kubectl set image deployment/django-donatio django-donatio=${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }}
+          kubectl set image deployment/django-donatio django-donatio=${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }} -n donatio
 
 
           
