--- a/k8s/ingress/ingress.yml
+++ b/k8s/ingress/ingress.yml
@@ -12,7 +12,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /api
+          - path: /admin
             pathType: Prefix
             backend:
               service:
