--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,5 @@ dependencies = [
     "requests>=2.32.4",
     "ruff>=0.12.1",
     "uvicorn>=0.35.0",
-    whitenoise = "^6.5.0"
+     "whitenoise>=6.5.0"
 ]
