--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
+
       - name: Build Django Backend Image
         run: |
           docker build --no-cache -t ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }} .
@@ -36,7 +37,7 @@ jobs:
       - name: Push Image to Amazon ECR
         run: |
           docker push ${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }}
-    
+
       - name: Configure kubeconfig
         run: |
           aws eks --region ap-southeast-1 update-kubeconfig --name opom-infra-prod
@@ -45,5 +46,6 @@ jobs:
         run: |
           kubectl set image deployment/django-donatio django-donatio=${{ steps.login-ecr.outputs.registry }}/eks-cluster/donatio:${{ github.sha }} -n donatio
 
-
-          
+      - name: Wait for rollout to finish
+        run: |
+          kubectl rollout status deployment/django-donatio -n donatio
