--- a/k8s/ingress/ingress.yml
+++ b/k8s/ingress/ingress.yml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: app-ingress
   annotations:
+    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
@@ -20,6 +21,13 @@ spec:
                 port:
                   number: 8000
           - path: /admin
+            pathType: Prefix
+            backend:
+              service:
+                name: django-donatio-service
+                port:
+                  number: 8000
+          - path: /static/
             pathType: Prefix
             backend:
               service:
