--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,13 @@
 version: "3.9"
 
 services:
-  donatio_backend:
+  donatio-backend:
     build: .
     container_name: donatio-backend
     ports: 
       - "8000:8000"
     volumes:
       - .:/app
-
+      - /app/.venv
+  
 
