--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,12 @@ dependencies = [
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
     "drf-nested-routers>=0.94.2",
+    "gunicorn>=23.0.0",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
     "pyzbar>=0.1.9",
     "requests>=2.32.4",
     "ruff>=0.12.1",
     "uvicorn>=0.35.0",
-     "whitenoise>=6.5.0"
+    "whitenoise>=6.5.0",
 ]
